feat: add vote registration operation (#398)
* feat: add vote registration operation

* feat: add parsers for vote registration metadata

* test: fix fixture data with new encode

* refactor: add TransactionExtraData to encodeExtraData

* feat: encode vote auxiliary data bytes instead of object and add one simple test

* test: add vote registration construction tests
