# cardano-rosetta-server/src/server/utils/constants.ts
@@ -44,7 +44,8 @@ export enum OperationType {
   STAKE_KEY_DEREGISTRATION = 'stakeKeyDeregistration',
   POOL_REGISTRATION = 'poolRegistration',
   POOL_REGISTRATION_WITH_CERT = 'poolRegistrationWithCert',
-  POOL_RETIREMENT = 'poolRetirement'
+  POOL_RETIREMENT = 'poolRetirement',
+  VOTE_REGISTRATION = 'voteRegistration'
 }
 
 export enum RelayType {
@@ -67,6 +68,8 @@ export const PoolOperations = [
   OperationType.POOL_REGISTRATION,
   OperationType.POOL_REGISTRATION_WITH_CERT
 ];
+
+export const VoteOperations = [OperationType.VOTE_REGISTRATION];
 
 export enum OperationTypeStatus {
   SUCCESS = 'success',
@@ -111,3 +114,22 @@ export enum EraAddressType {
   Shelley,
   Byron
 }
+
+export enum CatalystLabels {
+  DATA = '61284',
+  SIG = '61285'
+}
+
+/* eslint-disable no-magic-numbers */
+// unlike @typescript-eslint/no-magic-numbers, the base rule doesn't have a `ignoreEnums` option
+export enum CatalystDataIndexes {
+  VOTING_KEY = 1,
+  STAKE_KEY = 2,
+  REWARD_ADDRESS = 3,
+  VOTING_NONCE = 4
+}
+
+export enum CatalystSigIndexes {
+  VOTING_SIGNATURE = 1
+}
+/* eslint-disable no-magic-numbers */
